crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__empty_enum_parser.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: parser
---
#[automatically_derived]
impl<'tokens, 'src: 'tokens> ::kirin::parsers::HasDialectParser<'tokens, 'src> for EmptyLang
where
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output<__TypeOutput, __LanguageOutput>
        = EmptyLangAST<'tokens, 'src, __TypeOutput, __LanguageOutput>
    where
        __TypeOutput: Clone + PartialEq + 'tokens,
        __LanguageOutput: Clone + PartialEq + 'tokens;
    #[inline]
    fn recursive_parser<I, __TypeOutput, __LanguageOutput>(
        language: ::kirin::parsers::RecursiveParser<'tokens, 'src, I, __LanguageOutput>,
    ) -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output<__TypeOutput, __LanguageOutput>>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
        __TypeOutput: Clone + PartialEq + 'tokens,
        __LanguageOutput: Clone + PartialEq + 'tokens,
    {
        use kirin::parsers::chumsky::prelude::*;
        ::kirin::parsers::chumsky::prelude::empty()
            .map(|_: ()| unreachable!())
            .boxed()
    }
}
#[automatically_derived]
impl<'tokens, 'src: 'tokens> ::kirin::parsers::HasParser<'tokens, 'src> for EmptyLang
where
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output = EmptyLangASTSelf<
        'tokens,
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >;
    fn parser<I>() -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
    {
        use kirin::parsers::chumsky::prelude::*;
        ::kirin::parsers::chumsky::recursive::recursive(|language| {
            <EmptyLang as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::recursive_parser::<
                I,
                <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
                Self::Output,
            >(language)
            .map(|inner| EmptyLangASTSelf::new(inner))
        })
        .boxed()
    }
}
