crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__enum_all_wrappers_emit.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: emit
---
impl<'tokens, 'src: 'tokens, Language: ::kirin::ir::Dialect> ::kirin::parsers::EmitIR<Language>
    for ComposedLangAST<'tokens, 'src, Language>
where
    Language: ::kirin::ir::Dialect + From<ComposedLang>,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output: ::kirin::parsers::EmitIR<
        Language,
        Output = <Language as ::kirin::ir::Dialect>::TypeLattice,
    >,
    Language: ::core::convert::From<ArithDialect>,
    Language: ::core::convert::From<ControlDialect>,
    <ArithDialect as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::Output<Language>:
        ::kirin::parsers::EmitIR<Language, Output = ::kirin::ir::Statement>,
    <ControlDialect as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::Output<Language>:
        ::kirin::parsers::EmitIR<Language, Output = ::kirin::ir::Statement>,
    ArithDialect: ::kirin::parsers::HasDialectParser<'tokens, 'src>,
    ControlDialect: ::kirin::parsers::HasDialectParser<'tokens, 'src>,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        match self {
            ComposedLangAST::Arith(inner) => inner.emit(ctx),
            ComposedLangAST::Control(inner) => inner.emit(ctx),
            ComposedLangAST::__Marker(_, unreachable) => match *unreachable {},
        }
    }
}
