crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__enum_mixed_wrappers_emit.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: emit
---
impl<'tokens, 'src: 'tokens, TypeOutput, LanguageOutput, Language>
    ::kirin::parsers::EmitIR<Language> for MixedLangAST<'tokens, 'src, TypeOutput, LanguageOutput>
where
    Language: ::kirin::ir::Dialect + From<MixedLang>,
    TypeOutput: Clone + PartialEq,
    LanguageOutput: Clone + PartialEq + 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output:
        ::kirin::parsers::EmitIR<Language, Output = <Language as ::kirin::ir::Dialect>::Type>,
    Language: ::core::convert::From<ArithDialect>,
    Language: ::core::convert::From<ControlDialect>,
    <ArithDialect as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::Output<
        TypeOutput,
        LanguageOutput,
    >: ::kirin::parsers::EmitIR<Language, Output = ::kirin::ir::Statement>,
    <ControlDialect as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::Output<
        TypeOutput,
        LanguageOutput,
    >: ::kirin::parsers::EmitIR<Language, Output = ::kirin::ir::Statement>,
    ArithDialect: ::kirin::parsers::HasDialectParser<'tokens, 'src>,
    ControlDialect: ::kirin::parsers::HasDialectParser<'tokens, 'src>,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        match self {
            MixedLangAST::Arith(inner) => ::kirin::parsers::EmitIR::emit(inner, ctx),
            MixedLangAST::Custom {
                arg: f_arg,
                res: f_res,
            } => {
                let f_arg_ir: ::kirin::ir::SSAValue = ::kirin::parsers::EmitIR::emit(f_arg, ctx);
                let f_res_ir: ::kirin::ir::ResultValue = ::kirin::parsers::EmitIR::emit(f_res, ctx);
                let dialect_variant: MixedLang = MixedLang::Custom {
                    arg: f_arg_ir.into(),
                    res: f_res_ir.into(),
                };
                ctx.stage.statement().definition(dialect_variant).new()
            }
            MixedLangAST::Control(inner) => ::kirin::parsers::EmitIR::emit(inner, ctx),
            MixedLangAST::__Marker(_, unreachable) => match *unreachable {},
        }
    }
}
impl<'tokens, 'src, TypeOutput, Language> ::kirin::parsers::EmitIR<Language>
    for MixedLangASTSelf<'tokens, 'src, TypeOutput>
where
    Language: ::kirin::ir::Dialect + From<MixedLang>,
    TypeOutput: Clone + PartialEq,
    'src: 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output:
        ::kirin::parsers::EmitIR<Language, Output = <Language as ::kirin::ir::Dialect>::Type>,
    Language: ::core::convert::From<ArithDialect>,
    Language: ::core::convert::From<ControlDialect>,
    <ArithDialect as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::Output<
        TypeOutput,
        MixedLangASTSelf<'tokens, 'src, TypeOutput>,
    >: ::kirin::parsers::EmitIR<Language, Output = ::kirin::ir::Statement>,
    <ControlDialect as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::Output<
        TypeOutput,
        MixedLangASTSelf<'tokens, 'src, TypeOutput>,
    >: ::kirin::parsers::EmitIR<Language, Output = ::kirin::ir::Statement>,
    ArithDialect: ::kirin::parsers::HasDialectParser<'tokens, 'src>,
    ControlDialect: ::kirin::parsers::HasDialectParser<'tokens, 'src>,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        ::kirin::parsers::EmitIR::emit(&self.0, ctx)
    }
}
